--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+.memes{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  gap: 1rem;
+  div{
+    border: 1.5px solid black;
+    border-radius: 5%;
+    padding: 10%;
+    img{ width: 100%;
+      height: 80%;}
+    
+    
+  }
+}
